# cmake_tst

./: CMakeLists.txt  main.cpp  run32.bat  run64.bat  runcmake.bat  xmlset.vbs  xmltst.vbs
dll/: CMakeLists.txt  run32.bat
dll/cmdll/: CMakeLists.txt  cm.cpp  cm.h
dll/cmexe/: CMakeLists.txt  cmexe.cpp
dll/cmlib/: CMakeLists.txt  cmlib.cpp  cmlib.h
